force-app/main/default/objects/Account.object
<CustomObject>
    <fields>
        <fullName>Account_Alternate_Email_Formula__c</fullName>
        <formula>Related_Contact_Record_P2__r.Contact_Alternate_Email__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Alternate Email (P2)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Alternate_Email_Opt_Out_Formula__c</fullName>
        <formula>Related_Contact_Record_P2__r.Contact_Alternate_Email_Opt_Out__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Alternate Email Opt Out (P2)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Account_Alternate_Phone_CountryC_Formula__c</fullName>
        <formula>TEXT(Related_Contact_Record_P2__r.Contact_Alternate_Phone_Country_CodePL__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Alternate Phone Country Code (P2)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Alternate_Phone_Formula__c</fullName>
        <formula>Related_Contact_Record_P2__r.Contact_Alternate_Phone__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Alternate Phone (P2)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Date_of_Birth_Formula__c</fullName>
        <formula>Related_Contact_Record_P2__r.Contact_Date_of_Birth__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Date of Birth (P2)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Account_Email_Opt_Out_Formula__c</fullName>
        <formula>Related_Contact_Record_P2__r.HasOptedOutOfEmail</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Email Opt Out (P2)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Account_Employer_Formula__c</fullName>
        <formula>Related_Contact_Record_P2__r.Contact_Employer__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Employer (P2)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Employment_Sector_Formula__c</fullName>
        <formula>Related_Contact_Record_P2__r.Contact_Employment_Sector__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Occupation (P2)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Has_Invoices__c</fullName>
        <description>A temporary field to identify the accounts that have invoices for the purpose of matching accounts in SF to accounts in Xero by ID as opposed to name</description>
        <label>Account Has Invoices</label>
        <summaryForeignKey>Invoice_Statement__c.Payer__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Account_Has_Second_Parent__c</fullName>
        <description>Used to control a field on the parent financial aid application form</description>
        <formula>IF(
   ISBLANK(Related_Contact_Record_P2__c),
   &quot;No&quot;,
   &quot;Yes&quot;
   )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Has Second Parent</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_ID_18_Char__c</fullName>
        <formula>CASESAFEID(Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account ID (18 Char)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Main_Email_Formula__c</fullName>
        <formula>Related_Contact_Record_P2__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Main Email (P2)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Mobile_Main_Phone_CountryC_Formu__c</fullName>
        <formula>TEXT(Related_Contact_Record_P2__r.Contact_Mobile_Main_Phone_Country_CodePL__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Mobile/Main Phone Country Code (P2)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Mobile_Main_Phone_Formula__c</fullName>
        <formula>Related_Contact_Record_P2__r.MobilePhone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Mobile/Main Phone (P2)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Name_Formula__c</fullName>
        <formula>TEXT(Related_Contact_Record_P2__r.Salutation) &amp; IF(TEXT(Related_Contact_Record_P2__r.Salutation) != &quot;&quot;, &quot; &quot;, &quot;&quot;) &amp; Related_Contact_Record_P2__r.FirstName &amp; IF(Related_Contact_Record_P2__r.FirstName != &quot;&quot;, &quot; &quot;, &quot;&quot;) &amp; Related_Contact_Record_P2__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Name (P2)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Name_in_Local_Language_Formula__c</fullName>
        <formula>Related_Contact_Record_P2__r.Contact_Name_in_Local_Language__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Name in Local Language (P2)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Nationality_Formula__c</fullName>
        <formula>TEXT( Related_Contact_Record_P2__r.Contact_Nationality__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Nationality (P2)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Passport_Other_ID_Formula__c</fullName>
        <formula>Related_Contact_Record_P2__r.Contact_Passport_Other_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Passport/Other ID# (P2)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Place_of_Birth_Formula__c</fullName>
        <formula>Related_Contact_Record_P2__r.Contact_Place_of_Birth__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Place of Birth (P2)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Relationship_Formula__c</fullName>
        <formula>TEXT(Related_Contact_Record_P2__r.Contact_Relationship__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Relationship (P2)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_UID_Formula__c</fullName>
        <description>A temporary field using only during migration to allow the auto-number field to be referenced indirectly in apex so that it can be changed to/from an auto-number field as required</description>
        <formula>Account_UID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account UID (Formula)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_UID__c</fullName>
        <description>Defines the contact code (API name: contactNumber) in Xero all accounts (company or person)</description>
        <displayFormat>{000000}</displayFormat>
        <externalId>true</externalId>
        <label>Account UID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Add_to_Google__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Add to Google</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Additional_Comments__c</fullName>
        <description>Shows comments submitted via the online application</description>
        <label>Additional Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Address_Local_Language__c</fullName>
        <label>Address Local Language</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Address__c</fullName>
        <label>Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Admin_Position__c</fullName>
        <label>Admin Position</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Resident Director</fullName>
                </value>
                <value>
                    <fullName>Head of Administration</fullName>
                </value>
                <value>
                    <fullName>Head of Finance</fullName>
                </value>
                <value>
                    <fullName>Head of Admissions</fullName>
                </value>
                <value>
                    <fullName>PA to Headmaster</fullName>
                </value>
                <value>
                    <fullName>Accounting Officer</fullName>
                </value>
                <value>
                    <fullName>Admissions Officer</fullName>
                </value>
                <value>
                    <fullName>HR Officer</fullName>
                </value>
                <value>
                    <fullName>Marketing/Events Officer</fullName>
                </value>
                <value>
                    <fullName>Procurement Officer</fullName>
                </value>
                <value>
                    <fullName>Facilities Officer</fullName>
                </value>
                <value>
                    <fullName>Bus Coordinator</fullName>
                </value>
                <value>
                    <fullName>Front Desk Officer</fullName>
                </value>
                <value>
                    <fullName>Head of IT</fullName>
                </value>
                <value>
                    <fullName>IT Assistant</fullName>
                </value>
                <value>
                    <fullName>Admin Support Officer</fullName>
                </value>
                <value>
                    <fullName>School Services Officer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Admissions_Notifications_Email__c</fullName>
        <defaultValue>&quot;admissions-notifications&quot;&amp;$User.Email_Domain_Extension__c</defaultValue>
        <label>Admissions Notifications Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Alt_Inv_Contact_Full_Name_inc_Sal__c</fullName>
        <description>This value, when != null, is passed to the parent financial information form to allow the parent to change the invoicing parent</description>
        <formula>IF(
   AND(
       TEXT(Primary_Invoicing_Contact__c) = &quot;First Parent&quot;, 
       Related_Contact_Record_P2__c != &quot;&quot;
       ), 

   TEXT(Related_Contact_Record_P2__r.Salutation)&amp;
   IF(TEXT(Related_Contact_Record_P2__r.Salutation) != &quot;&quot;, &quot; &quot;, &quot;&quot;)&amp;
   Related_Contact_Record_P2__r.FirstName&amp;
   IF(Related_Contact_Record_P2__r.FirstName != &quot;&quot;, &quot; &quot;, &quot;&quot;)&amp;
   Related_Contact_Record_P2__r.LastName,

   IF(
      TEXT(Primary_Invoicing_Contact__c) = &quot;Second Parent&quot;,    

      TEXT(Salutation)&amp;
      IF(TEXT(Salutation) != &quot;&quot;, &quot; &quot;, &quot;&quot;)&amp;
      FirstName&amp;
      IF(FirstName != &quot;&quot;, &quot; &quot;, &quot;&quot;)&amp;
      LastName,
      &quot;&quot;
      )
   )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Alt. Inv. Contact Full Name (inc. Sal.)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Alt_Inv_Contact_Null__c</fullName>
        <formula>IF(Alt_Inv_Contact_Full_Name_inc_Sal__c != &quot;&quot;, &quot;Yes&quot;, &quot;No&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Alt. Inv. Contact != Null?</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Alternate_Contact_Email__c</fullName>
        <formula>IF( AND(TEXT(Primary_Contact__c) =&quot;Second Parent&quot;, Contact_Alternate_Email_Opt_Out__pc &lt;&gt; TRUE, Contact_Alternate_Email__pc &lt;&gt; &quot;&quot;, OR(PersonEmail = &quot;&quot;, PersonHasOptedOutOfEmail = TRUE)), Contact_Alternate_Email__pc, 

IF( AND(TEXT(Primary_Contact__c) =&quot;Second Parent&quot;, PersonEmail &lt;&gt; &quot;&quot;, PersonHasOptedOutOfEmail &lt;&gt; TRUE), PersonEmail, 

IF( AND(TEXT(Primary_Contact__c) =&quot;First Parent&quot;, Account_Alternate_Email_Opt_Out_Formula__c &lt;&gt; TRUE, Account_Alternate_Email_Formula__c &lt;&gt; &quot;&quot;, OR(Account_Main_Email_Formula__c = &quot;&quot;, Account_Email_Opt_Out_Formula__c = TRUE)), Account_Alternate_Email_Formula__c, 

IF( AND(TEXT(Primary_Contact__c) =&quot;First Parent&quot;, Account_Main_Email_Formula__c &lt;&gt; &quot;&quot;, Account_Email_Opt_Out_Formula__c &lt;&gt; TRUE), Account_Main_Email_Formula__c, 

&quot;Not Defined or Opted Out&quot;))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Alternate Contact Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Alternate_Contact_Name__c</fullName>
        <formula>IF(TEXT(Primary_Contact__c) = &quot;First Parent&quot;, Account_Name_Formula__c, TEXT(Salutation)&amp;&quot; &quot;&amp;FirstName&amp;&quot; &quot;&amp;LastName)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Alternate Contact Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Alternate_Contact_Phone__c</fullName>
        <formula>IF(AND(TEXT(Primary_Contact__c) = &quot;Second Parent&quot;, xsms__Mobile_Phone_Country_Code__pc &lt;&gt; &quot;&quot;, PersonMobilePhone &lt;&gt; &quot;&quot;), &quot;+&quot;&amp; xsms__Mobile_Phone_Country_Code__pc &amp;&quot; &quot;, 

IF(AND(TEXT(Primary_Contact__c) = &quot;Second Parent&quot;, Contact_Alternate_Phone_Country_Code__pc &lt;&gt; &quot;&quot;, Contact_Alternate_Phone__pc &lt;&gt; &quot;&quot;, OR(xsms__Mobile_Phone_Country_Code__pc = &quot;&quot;, PersonMobilePhone = &quot;&quot;)), &quot;+&quot;&amp; Contact_Alternate_Phone_Country_Code__pc &amp;&quot; &quot;, 

IF(AND(TEXT(Primary_Contact__c) = &quot;First Parent&quot;, Related_Contact_Record_P2__r.xsms__Mobile_Phone_Country_Code__c &lt;&gt; &quot;&quot;, Account_Mobile_Main_Phone_Formula__c &lt;&gt; &quot;&quot;), &quot;+&quot;&amp; Related_Contact_Record_P2__r.xsms__Mobile_Phone_Country_Code__c &amp;&quot; &quot;, 

IF(AND(TEXT(Primary_Contact__c) = &quot;First Parent&quot;, Related_Contact_Record_P2__r.Contact_Alternate_Phone_Country_Code__c &lt;&gt; &quot;&quot;, Account_Alternate_Phone_Formula__c &lt;&gt; &quot;&quot;, OR(Related_Contact_Record_P2__r.xsms__Mobile_Phone_Country_Code__c = &quot;&quot;, Account_Mobile_Main_Phone_Formula__c = &quot;&quot;)), &quot;+&quot;&amp; Related_Contact_Record_P2__r.Contact_Alternate_Phone_Country_Code__c &amp;&quot; &quot;, 

&quot;&quot;)))) &amp;

IF(AND(TEXT(Primary_Contact__c) = &quot;Second Parent&quot;, xsms__Mobile_Phone_Country_Code__pc &lt;&gt; &quot;&quot;, PersonMobilePhone &lt;&gt; &quot;&quot;), PersonMobilePhone, 

IF(AND(TEXT(Primary_Contact__c) = &quot;Second Parent&quot;, Contact_Alternate_Phone_Country_Code__pc &lt;&gt; &quot;&quot;, Contact_Alternate_Phone__pc &lt;&gt; &quot;&quot;, OR(xsms__Mobile_Phone_Country_Code__pc = &quot;&quot;, PersonMobilePhone = &quot;&quot;)), Contact_Alternate_Phone__pc, 

IF(AND(TEXT(Primary_Contact__c) = &quot;First Parent&quot;, Related_Contact_Record_P2__r.xsms__Mobile_Phone_Country_Code__c &lt;&gt; &quot;&quot;, Account_Mobile_Main_Phone_Formula__c &lt;&gt; &quot;&quot;), Account_Mobile_Main_Phone_Formula__c, 

IF(AND(TEXT(Primary_Contact__c) = &quot;First Parent&quot;, Related_Contact_Record_P2__r.Contact_Alternate_Phone_Country_Code__c &lt;&gt; &quot;&quot;, Account_Alternate_Phone_Formula__c &lt;&gt; &quot;&quot;, OR(Related_Contact_Record_P2__r.xsms__Mobile_Phone_Country_Code__c = &quot;&quot;, Account_Mobile_Main_Phone_Formula__c = &quot;&quot;)), Account_Alternate_Phone_Formula__c, 

&quot;Not Defined or Not Complete&quot;))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Alternate Contact Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Alternate_Contact_User_ID__c</fullName>
        <formula>IF(TEXT(Primary_Contact__c) == &apos;First Parent&apos;, Related_Contact_Record_P2__r.User__c , IF(TEXT(Primary_Contact__c) == &apos;Second Parent&apos;, User__pc,&apos;&apos;) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Alternate Contact User ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Appendix_Number__c</fullName>
        <formula>IF(OR(Imported_Appendix_Number__c=0,Imported_Appendix_Number__c=NULL),Invoice_Count__c, Imported_Appendix_Number__c +1+( Invoice_Count__c - Original_Invoice_Count__c ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Appendix Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Application_City__c</fullName>
        <description>Captured in the online application form from June 2016</description>
        <label>Application City</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Application_Country__c</fullName>
        <description>Captured in the online application form from June 2016</description>
        <label>Application Country</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Afghanistan</fullName>
                </value>
                <value>
                    <fullName>Albania</fullName>
                </value>
                <value>
                    <fullName>Algeria</fullName>
                </value>
                <value>
                    <fullName>American Samoa</fullName>
                </value>
                <value>
                    <fullName>Andorra</fullName>
                </value>
                <value>
                    <fullName>Angola</fullName>
                </value>
                <value>
                    <fullName>Anguilla</fullName>
                </value>
                <value>
                    <fullName>Antarctica</fullName>
                </value>
                <value>
                    <fullName>Antigua and Barbuda</fullName>
                </value>
                <value>
                    <fullName>Argentina</fullName>
                </value>
                <value>
                    <fullName>Armenia</fullName>
                </value>
                <value>
                    <fullName>Aruba</fullName>
                </value>
                <value>
                    <fullName>Australia</fullName>
                </value>
                <value>
                    <fullName>Austria</fullName>
                </value>
                <value>
                    <fullName>Azerbaijan</fullName>
                </value>
                <value>
                    <fullName>Bahamas</fullName>
                </value>
                <value>
                    <fullName>Bahrain</fullName>
                </value>
                <value>
                    <fullName>Bangladesh</fullName>
                </value>
                <value>
                    <fullName>Barbados</fullName>
                </value>
                <value>
                    <fullName>Belarus</fullName>
                </value>
                <value>
                    <fullName>Belgium</fullName>
                </value>
                <value>
                    <fullName>Belize</fullName>
                </value>
                <value>
                    <fullName>Benin</fullName>
                </value>
                <value>
                    <fullName>Bermuda</fullName>
                </value>
                <value>
                    <fullName>Bhutan</fullName>
                </value>
                <value>
                    <fullName>Bolivia</fullName>
                </value>
                <value>
                    <fullName>Bosnia and Herzegovina</fullName>
                </value>
                <value>
                    <fullName>Botswana</fullName>
                </value>
                <value>
                    <fullName>Brazil</fullName>
                </value>
                <value>
                    <fullName>British Indian Ocean Territory</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Application_Date__c</fullName>
        <formula>CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Application Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Applied_via_Website__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This box is checked when the application came in via the website</description>
        <inlineHelpText>Do not check manually</inlineHelpText>
        <label>Applied via Website</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Audit_Recommended_Enrolment__c</fullName>
        <description>Used in reports on the invoice auditing dashboard</description>
        <formula>AND(Has_Enrolment_Fee_Line_Item__c = 0, Starting_Date__c &gt;= Auto_Audit_Start_Date__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Audit Recommended (Enrolment)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Auto_Audit_Start_Date__c</fullName>
        <description>Diplays the minimum auto-audit start date from the related student records to identify the auto-audit start date for the account</description>
        <label>Auto-Audit Start Date</label>
        <summarizedField>Opportunity.Auto_Audit_Start_Date_Copy__c</summarizedField>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>min</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Auto_Number__c</fullName>
        <displayFormat>{00000}</displayFormat>
        <label>Auto-Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Auto_reply_Language__c</fullName>
        <label>Auto-reply Language</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>English</fullName>
                </value>
                <value>
                    <fullName>Spanish</fullName>
                </value>
                <value>
                    <fullName>Portuguese</fullName>
                </value>
                <value>
                    <fullName>Russian</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BSG_Parent_Upper_Lower__c</fullName>
        <formula>IF( AND ( Year2__c + Year3__c + Year4__c + Year5__c + Year6__c + Year7__c + Year8__c + Year9__c + Year10__c + Year11__c + Year12__c + Year13__c &gt; 0, PreNursery__c +  Nursery1__c +  Reception1__c + Year1__c = 0), &quot;Upper&quot;,

IF( AND ( Year2__c + Year3__c + Year4__c + Year5__c + Year6__c + Year7__c + Year8__c + Year9__c + Year10__c + Year11__c + Year12__c + Year13__c = 0, PreNursery__c +  Nursery1__c +  Reception1__c + Year1__c &gt; 0), &quot;Lower&quot;,

IF( AND ( Year2__c + Year3__c + Year4__c + Year5__c + Year6__c + Year7__c + Year8__c + Year9__c + Year10__c + Year11__c + Year12__c + Year13__c &gt; 0, PreNursery__c +  Nursery1__c +  Reception1__c + Year1__c &gt; 0), &quot;Both&quot;,

&quot;Error&quot;)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>BSG Parent Upper/Lower</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BSKL_Parent_Primary_Secondary__c</fullName>
        <formula>IF( AND ( Year7__c + Year8__c + Year9__c + Year10__c + Year11__c + Year12__c + Year13__c &gt; 0, PreNursery__c +  Nursery1__c +  Reception1__c + Year1__c + Year2__c + Year3__c + Year4__c + Year5__c + Year6__c= 0), &quot;Secondary&quot;,

IF ( AND ( Year7__c + Year8__c + Year9__c + Year10__c + Year11__c + Year12__c + Year13__c = 0, PreNursery__c +  Nursery1__c +  Reception1__c + Year1__c + Year2__c + Year3__c + Year4__c + Year5__c + Year6__c &gt; 0), &quot;Primary&quot;,

IF ( AND ( Year7__c + Year8__c + Year9__c + Year10__c + Year11__c + Year12__c + Year13__c &gt; 0, PreNursery__c +  Nursery1__c +  Reception1__c + Year1__c + Year2__c + Year3__c + Year4__c + Year5__c + Year6__c &gt; 0), &quot;Both&quot;, 

&quot;Error&quot;)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>BSKL Parent Primary/Secondary</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BSNJ_has_has_not__c</fullName>
        <description>BEN 20180806: I have no idea what this field does. It is not used in any code or field references so can only be used in an email template, report, s-doc template or similar (most likely an s-doc template). Need to check through Eclipse.</description>
        <formula>IF( OwnerId = &quot;0056F000008vWtJ&quot;, &quot;HAS&quot;, &quot;HAS NOT&quot; )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>BSNJ has/has not</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BST_Parent_Upper_Lower__c</fullName>
        <formula>IF( AND ( Year2__c + Year3__c + Year4__c + Year5__c + Year6__c + Year7__c + Year8__c + Year9__c + Year10__c + Year11__c + Year12__c + Year13__c &gt; 0, PreNursery__c + Nursery1__c + Reception1__c + Year1__c = 0), &quot;Upper&quot;, 

IF ( AND ( Year2__c + Year3__c + Year4__c + Year5__c + Year6__c + Year7__c + Year8__c + Year9__c + Year10__c + Year11__c + Year12__c + Year13__c = 0, PreNursery__c + Nursery1__c + Reception1__c + Year1__c &gt; 0), &quot;Lower&quot;, 

IF ( AND ( Year2__c + Year3__c + Year4__c + Year5__c + Year6__c + Year7__c + Year8__c + Year9__c + Year10__c + Year11__c + Year12__c + Year13__c &gt; 0, PreNursery__c + Nursery1__c + Reception1__c + Year1__c &gt; 0), &quot;Both&quot;, 

&quot;Error&quot;)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>BST Parent Upper/Lower</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bank_Details_Local_Language__c</fullName>
        <label>Bank Details Local Language</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Bank_Details__c</fullName>
        <label>Bank Details</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Bulk_SMS_Account_First_Name_Formula__c</fullName>
        <formula>Related_Contact_Record_P2__r.FirstName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Bulk SMS Account First Name Formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bulk_SMS_Account_Last_Name_Formula__c</fullName>
        <formula>Related_Contact_Record_P2__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Bulk SMS Account Last Name Formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bulk_SMS_Alternate_Contact_First_Name__c</fullName>
        <formula>IF(TEXT(Primary_Contact__c) = &quot;First Parent&quot;, Bulk_SMS_Account_First_Name_Formula__c, FirstName)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Bulk SMS Alternate Contact First Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bulk_SMS_Alternate_Contact_Last_Name__c</fullName>
        <formula>IF(TEXT(Primary_Contact__c) = &quot;First Parent&quot;, Bulk_SMS_Account_Last_Name_Formula__c, LastName)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Bulk SMS Alternate Contact Last Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bulk_SMS_Alternate_Number__c</fullName>
        <formula>IF(AND(TEXT(Primary_Contact__c) = &quot;Second Parent&quot;, xsms__Mobile_Phone_Country_Code__pc &lt;&gt; &quot;&quot;, PersonMobilePhone &lt;&gt; &quot;&quot;), xsms__Mobile_Phone_Country_Code__pc, 

IF(AND(TEXT(Primary_Contact__c) = &quot;Second Parent&quot;, Contact_Alternate_Phone_Country_Code__pc &lt;&gt; &quot;&quot;, Contact_Alternate_Phone__pc &lt;&gt; &quot;&quot;, OR(xsms__Mobile_Phone_Country_Code__pc = &quot;&quot;, PersonMobilePhone = &quot;&quot;)), Contact_Alternate_Phone_Country_Code__pc, 

IF(AND(TEXT(Primary_Contact__c) = &quot;First Parent&quot;, Related_Contact_Record_P2__r.xsms__Mobile_Phone_Country_Code__c &lt;&gt; &quot;&quot;, Account_Mobile_Main_Phone_Formula__c &lt;&gt; &quot;&quot;), Related_Contact_Record_P2__r.xsms__Mobile_Phone_Country_Code__c, 

IF(AND(TEXT(Primary_Contact__c) = &quot;First Parent&quot;, Related_Contact_Record_P2__r.Contact_Alternate_Phone_Country_Code__c &lt;&gt; &quot;&quot;, Account_Alternate_Phone_Formula__c &lt;&gt; &quot;&quot;, OR(Related_Contact_Record_P2__r.xsms__Mobile_Phone_Country_Code__c = &quot;&quot;, Account_Mobile_Main_Phone_Formula__c = &quot;&quot;)), Related_Contact_Record_P2__r.Contact_Alternate_Phone_Country_Code__c, 

&quot;&quot;)))) &amp; 

IF(AND(TEXT(Primary_Contact__c) = &quot;Second Parent&quot;, xsms__Mobile_Phone_Country_Code__pc &lt;&gt; &quot;&quot;, PersonMobilePhone &lt;&gt; &quot;&quot;), PersonMobilePhone, 

IF(AND(TEXT(Primary_Contact__c) = &quot;Second Parent&quot;, Contact_Alternate_Phone_Country_Code__pc &lt;&gt; &quot;&quot;, Contact_Alternate_Phone__pc &lt;&gt; &quot;&quot;, OR(xsms__Mobile_Phone_Country_Code__pc = &quot;&quot;, PersonMobilePhone = &quot;&quot;)), Contact_Alternate_Phone__pc, 

IF(AND(TEXT(Primary_Contact__c) = &quot;First Parent&quot;, Related_Contact_Record_P2__r.xsms__Mobile_Phone_Country_Code__c &lt;&gt; &quot;&quot;, Account_Mobile_Main_Phone_Formula__c &lt;&gt; &quot;&quot;), Account_Mobile_Main_Phone_Formula__c, 

IF(AND(TEXT(Primary_Contact__c) = &quot;First Parent&quot;, Related_Contact_Record_P2__r.Contact_Alternate_Phone_Country_Code__c &lt;&gt; &quot;&quot;, Account_Alternate_Phone_Formula__c &lt;&gt; &quot;&quot;, OR(Related_Contact_Record_P2__r.xsms__Mobile_Phone_Country_Code__c = &quot;&quot;, Account_Mobile_Main_Phone_Formula__c = &quot;&quot;)), Account_Alternate_Phone_Formula__c, 

&quot;Not Defined or Not Complete&quot;))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Bulk SMS Alternate Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bulk_SMS_Primary_Number__c</fullName>
        <formula>IF(AND(TEXT(Primary_Contact__c) = &quot;First Parent&quot;, xsms__Mobile_Phone_Country_Code__pc &lt;&gt; &quot;&quot;, PersonMobilePhone &lt;&gt; &quot;&quot;), xsms__Mobile_Phone_Country_Code__pc, 

IF(AND(TEXT(Primary_Contact__c) = &quot;First Parent&quot;, Contact_Alternate_Phone_Country_Code__pc &lt;&gt; &quot;&quot;, Contact_Alternate_Phone__pc &lt;&gt; &quot;&quot;, OR(xsms__Mobile_Phone_Country_Code__pc = &quot;&quot;, PersonMobilePhone = &quot;&quot;)), Contact_Alternate_Phone_Country_Code__pc, 

IF(AND(TEXT(Primary_Contact__c) = &quot;Second Parent&quot;, Related_Contact_Record_P2__r.xsms__Mobile_Phone_Country_Code__c &lt;&gt; &quot;&quot;, Account_Mobile_Main_Phone_Formula__c &lt;&gt; &quot;&quot;), Related_Contact_Record_P2__r.xsms__Mobile_Phone_Country_Code__c, 

IF(AND(TEXT(Primary_Contact__c) = &quot;Second Parent&quot;, Related_Contact_Record_P2__r.Contact_Alternate_Phone_Country_Code__c &lt;&gt; &quot;&quot;, Account_Alternate_Phone_Formula__c &lt;&gt; &quot;&quot;, OR(Related_Contact_Record_P2__r.xsms__Mobile_Phone_Country_Code__c = &quot;&quot;, Account_Mobile_Main_Phone_Formula__c = &quot;&quot;)), Related_Contact_Record_P2__r.Contact_Alternate_Phone_Country_Code__c, 

&quot;&quot;)))) &amp; 

IF(AND(TEXT(Primary_Contact__c) = &quot;First Parent&quot;, xsms__Mobile_Phone_Country_Code__pc &lt;&gt; &quot;&quot;, PersonMobilePhone &lt;&gt; &quot;&quot;), PersonMobilePhone, 

IF(AND(TEXT(Primary_Contact__c) = &quot;First Parent&quot;, Contact_Alternate_Phone_Country_Code__pc &lt;&gt; &quot;&quot;, Contact_Alternate_Phone__pc &lt;&gt; &quot;&quot;, OR(xsms__Mobile_Phone_Country_Code__pc = &quot;&quot;, PersonMobilePhone = &quot;&quot;)), Contact_Alternate_Phone__pc, 

IF(AND(TEXT(Primary_Contact__c) = &quot;Second Parent&quot;, Related_Contact_Record_P2__r.xsms__Mobile_Phone_Country_Code__c &lt;&gt; &quot;&quot;, Account_Mobile_Main_Phone_Formula__c &lt;&gt; &quot;&quot;), Account_Mobile_Main_Phone_Formula__c, 

IF(AND(TEXT(Primary_Contact__c) = &quot;Second Parent&quot;, Related_Contact_Record_P2__r.Contact_Alternate_Phone_Country_Code__c &lt;&gt; &quot;&quot;, Account_Alternate_Phone_Formula__c &lt;&gt; &quot;&quot;, OR(Related_Contact_Record_P2__r.xsms__Mobile_Phone_Country_Code__c = &quot;&quot;, Account_Mobile_Main_Phone_Formula__c = &quot;&quot;)), Account_Alternate_Phone_Formula__c, 

&quot;Not Defined or Not Complete&quot;))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Bulk SMS Primary Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bus_Service_Yes__c</fullName>
        <description>Field used for the Parent Contact Update form, to show or not the bus contact field depending if the family has a bus service or not.</description>
        <formula>IF( Bus_Service__c &gt;0,&quot;tfa_Yes&quot;,&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Bus Service, &quot;Yes&quot;</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bus_Service__c</fullName>
        <description>Counts the number of bus services offered</description>
        <label>Bus Service</label>
        <summaryFilterItems>
            <field>Opportunity.Bus_Service__c</field>
            <operation>greaterThan</operation>
            <value>0</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Opportunity.StageName</field>
            <operation>equals</operation>
            <value>Enrolled</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Bus_Stop__c</fullName>
        <label>Bus Stop</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CC_on_Mass_Email_Campus_1__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>ISM Krylatskoe LC
BSKL Primary
BST Lower
BCB Chácara Flora</inlineHelpText>
        <label>CC on Mass Email Campus 1</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>